src/main/docker/k8s/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-nginx
  annotations:
    kompose.cmd: kompose convert -f app.yml -o k8s/
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: postgresql
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f app.yml -o k8s/
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/triggeriq-default: "true"
        io.kompose.service: postgresql
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: triggerIq
            - name: POSTGRES_PASSWORD
              value: triggerIq
            - name: POSTGRES_USER
              value: triggerIq
            - name: PGDATA
              value: /var/lib/postgresql/pgdata
          image: docker.io/library/postgres:17.2
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - triggerIq
            failureThreshold: 10
            periodSeconds: 5
            timeoutSeconds: 5
          name: postgres-db
          ports:
            - containerPort: 5432
              hostPort: 5432
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: pgdata
      restartPolicy: Always
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: pgdata
status: {}
