src/main/docker/k8s/mailhog-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-nginx # Adjust namespace as needed
  name: mailhog
  labels:
    app: mailhog
spec:
  ports:
    - name: smtp
      port: 1025 # <-- Match the app config
      targetPort: 1025 # <-- Match the containerPort
    - name: http
      port: 8025
      targetPort: 8025
  selector:
    app: mailhog # Adjust the selector to match your Mailhog pod label
  type: ClusterIP # This will expose Mailhog internally within the cluster
