src/main/docker/k8s/triggeriq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: triggeriq-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # If you don't have SSL configured yet
spec:
  rules:
    - host: triggeriq.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: triggeriq
                port:
                  number: 8081   # Ensure this matches the port your service is exposing
